--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Deploy to Server
         run: |
           ssh root@65.108.38.170 << 'EOF'
-            cd /root/HIRICS
+            cd /home/projects/HIRICS
             git pull origin main
             docker-compose down
             docker-compose up --build -d
