--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
 
       - name: Add server to known_hosts
         run: |
-          ssh-keyscan -H 65.108.38.170 >> ~/.ssh/known_hosts
+          ssh-keyscan -H -p 2226 65.108.38.170 >> ~/.ssh/known_hosts
 
       - name: Deploy to Server
         run: |
